--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,122 +1,74 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
-.main {
-  padding: 5rem 0;
-  flex: 1;
+.header {
+  background: #fb6252;
+  width: 100%;
   display: flex;
-  flex-direction: column;
   justify-content: center;
-  align-items: center;
 }
+
+.logotipo {}
+
+.main {
+  height: 100%;
+  overflow: auto;
+  width: 100%;
+}
+
+.table {
+  width: 100%;
+  display: table;
+  border-spacing: 0
+}
+
+.table thead {
+  display: table-header-group;
+}
+
+.table thead tr, .table tbody tr {
+  display: table-row;
+  outline: 0;
+  vertical-align: middle;
+}
+
+.table thead th {
+  top: 0;
+  left: 0;
+  z-index: 2;
+  position: sticky;  
+  text-align: left;
+  background: #fff;
+  font-weight: 500;
+  font-size: 0.875rem;
+  border-bottom: 1px solid rgba(224, 224, 224, 1);
+}
+
+.table tbody {
+  display: table-row-group;
+}
+
+.table thead th, .table tbody td {
+  padding: 8px 0 8px 8px;
+}
+
+.table tbody td {
+  text-align: left;
+  background: #fff;
+  font-size: 0.875rem;
+  border-bottom: 1px solid rgba(224, 224, 224, 1);
+}
+
 
 .footer {
   width: 100%;
-  height: 100px;
   border-top: 1px solid #eaeaea;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
-}
-
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
-}
-
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
-
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
-
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
-}
-
-.logo {
-  height: 1em;
-}
-
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
-    flex-direction: column;
-  }
 }
