--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,13 @@ body, #__next {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     height: 100%;
+    font-size: 100%
 }
 
 * {
   box-sizing: border-box;
+}
+
+p {
+  margin: 0;
 }
