--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -7,10 +7,14 @@
 }
 
 .header {
-  background: #fb6252;
+  background: #f9f9f9;
   width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 8px;
+  align-items: center;
+  box-shadow: 0px 1px 4px 0px #c3c3c3;
+  z-index: 3;
 }
 
 .logotipo {}
@@ -112,8 +116,28 @@
 .pedido {
   border: 2px solid #000;
   padding: 8px 16px;
+  cursor: pointer;
 }
 
 .orderId {
-  font-size: 24px;
+  font-size: 30px;
+}
+
+
+.formPedido {
+  display: flex;
+}
+
+.formPedido input {
+  padding: 8px 16px;
+  border-radius: 20px 0 0 20px;
+  outline: none;
+}
+
+.formPedido button {
+  padding: 8px 16px;
+  background: #000;
+  color: #fff;
+  border: 0;
+  border-radius: 0 20px 20px 0;
 }
